# free-monads-talk

./: FreeMonads.html  FreeMonads.lhs  Makefile  Readme.md  free-monads-talk.cabal  stack.yaml
src/: FreeMonads.lhs  Talk.hs
