name:                free-monads-talk
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/chrisbarrett/free-monads-talk#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Barrett
maintainer:          chris.d.barrett@me.com
copyright:           Chris Barrett
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Talk
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , free
                     , filepath
                     , mtl
                     , monad-logger
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisbarrett/free-monads-talk
